--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
    <title>Document</title>
 </head>
 <body>
-   <h1>Hello World</h1>
-   <h1>Upstream new Branch</h1>
+   <h1>this is newBranch code</h1>
 </body>
 </html>
